# grpc-transfer

./: README.md  setup.sh
client-server/: CMakeLists.txt
client-server/client/: CMakeLists.txt
client-server/client/src/: main.cpp
client-server/server/: CMakeLists.txt
client-server/server/src/: main.cpp
protos/: filetransfer.proto
test/src/: grpc_test.py
